--- a/src/app/offer-list/offer-list.component.html
+++ b/src/app/offer-list/offer-list.component.html
@@ -37,7 +37,7 @@
                 <form (ngSubmit)="addOffer()" [formGroup]="offerForm">
                     <div class="form-group">
                         <label>Title</label>
-                        <input type="text" class="form-control" [(ngModel)]="newOffer.title" formControlName="title" name="title" >
+                        <input type="text" class="form-control" [(ngModel)]="newOffer.title" formControlName="title" name="title" required>
                     </div>
                     <div class="form-group">
                         <label>Description</label>
