"Added AuthGuard to protect certain routes, added Login and Profile components, updated Navbar and Register components to use AuthService, removed RegisterService and OfferService tests"

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -32,15 +32,15 @@
                     </a>
 
                     <div class="dropdown-menu">
-                        <a href="#" class="dropdown-item d-flex justify-content-between align-items-center">
+                        
+                        <br>
+                        <small style="margin-left:30px;"  >Arrive bientot </small>
+                        <a href="#" style="margin-top: 10px;" class="dropdown-item d-flex justify-content-between align-items-center disabled-option">
                             <span>English</span>
 
                             <img src="assets/img/us-flag.jpg" alt="flag">
                         </a>
-                        <hr>
-                        <small style="margin-left:30px;"  >coming soon </small><br>
-                       
-                        <a href="#" style="margin-top: 10px;" class="dropdown-item d-flex justify-content-between align-items-center disabled-option">
+                        <a href="#"  class="dropdown-item d-flex justify-content-between align-items-center disabled-option">
                             <span>German</span>
 
                             <img src="assets/img/germany-flag.jpg" alt="flag">
@@ -219,46 +219,42 @@
                     </div>
                 </li>
 
-                <li class="nav-item dropdown profile-nav-item">
+                <li class="nav-item dropdown profile-nav-item" *ngIf="authService.isLoggedIn$ | async">
                     <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <div class="menu-profile">
-                            <span class="name">Hi! Andro</span>
-                            <img src="assets/img/user1.jpg" class="rounded-circle" alt="image">
+                            <span class="name">Hi! {{ authService.userInfo.display_name }}</span>
+                            <img [src]="profileImageUrl" alt="Profile Image" *ngIf="profileImageUrl" class="rounded-circle" >
                         </div>
                     </a>
-
+                
                     <div class="dropdown-menu">
                         <div class="dropdown-header d-flex flex-column align-items-center">
                             <div class="figure mb-3">
-                                <img src="assets/img/user1.jpg" class="rounded-circle" alt="image">
+                                <img  [src]="profileImageUrl" alt="Profile Image" *ngIf="profileImageUrl" class="rounded-circle" >
                             </div>
-
+                
                             <div class="info text-center">
-                                <span class="name">Andro Smith</span>
-                                <p class="mb-3 email">helloandrosmith.com</p>
+                                <span class="name">{{ authService.userInfo.display_name }}</span>
+                                <p class="mb-3 email">{{ authService.userInfo.email }}</p>
                             </div>
                         </div>
-
+                
                         <div class="dropdown-body">
                             <ul class="profile-nav p-0 pt-3">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="/profile" class="nav-link">
                                         <i class='bx bx-user'></i> <span>Profile</span>
                                     </a>
                                 </li>
-
+                
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
                                         <i class='bx bx-envelope'></i> <span>My Inbox</span>
                                     </a>
                                 </li>
-
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class='bx bx-edit-alt'></i> <span>Edit Profile</span>
-                                    </a>
-                                </li>
-
+                
+                        
+                
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
                                         <i class='bx bx-cog'></i> <span>Settings</span>
@@ -266,11 +262,11 @@
                                 </li>
                             </ul>
                         </div>
-
+                
                         <div class="dropdown-footer">
                             <ul class="profile-nav">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="#" (click)="authService.logout()" class="nav-link">
                                         <i class='bx bx-log-out'></i> <span>Logout</span>
                                     </a>
                                 </li>
@@ -278,6 +274,7 @@
                         </div>
                     </div>
                 </li>
+                
             </ul>
         </div>
     </nav>
