--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,20 +4,25 @@
         <div class="register-form">
           <h2>S'inscrire a notre plateform!</h2>
   
-          <form onSubmit="submitForm()" #registerForm="ngForm">
+          <form (ngSubmit)="submitForm()" #registerForm="ngForm">
             <div class="form-group">
-              <input type="text" class="form-control" name="name" placeholder="Nom" [(ngModel)]="formData.name" required>
+              <input type="text" class="form-control" name="name" placeholder="Nom" [(ngModel)]="formData.name" >
               <span class="label-title"><i class='bx bx-user'></i></span>
+              <div *ngIf="formData.name == '' || formData.name ==' '" class="text-danger">Ce champs est obligatoire.</div>
+
+              
             </div>
   
             <div class="form-group">
               <input type="email" class="form-control" name="email" placeholder="Email" [(ngModel)]="formData.email" required>
               <span class="label-title"><i class='bx bx-envelope'></i></span>
+              <div *ngIf="formData.email == '' || formData.email ==' '" class="text-danger">Ce champs est obligatoire.</div>
             </div>
   
             <div class="form-group">
               <input type="password" class="form-control" name="password" placeholder="Mot de passe" [(ngModel)]="formData.password" required>
               <span class="label-title"><i class='bx bx-lock'></i></span>
+              <div *ngIf="formData.password == '' || formData.password ==' '" class="text-danger">Ce champs est obligatoire.</div>
             </div>
             
             <div class="form-group">
@@ -29,11 +34,11 @@
             <div class="form-group">
               <h5>Vous êtes:</h5><br>
               <label>
-                <input class="form-check-input" type="radio" name="role" value="client" [(ngModel)]="formData.role" required> un client
+                <input class="form-check-input" id="r1" type="radio" name="role" value="client" [(ngModel)]="formData.role" > un client
               </label>
               <br><br>
               <label>
-                <input class="form-check-input" type="radio" name="role" value="company" [(ngModel)]="formData.role" required> une societé de déménagement
+                <input class="form-check-input" id="r1" type="radio" name="role" value="company" [(ngModel)]="formData.role"> une societé de déménagement
               </label>
             </div>
             
