--- a/src/app/edit-offer/edit-offer.component.html
+++ b/src/app/edit-offer/edit-offer.component.html
@@ -1,21 +1,47 @@
-<app-sidebar></app-sidebar>
+style="width: 100xp;" <app-sidebar></app-sidebar>
 <div class="main-content d-flex flex-column">
   <app-navbar></app-navbar>
-  <br><h2>Modifier Offre</h2><hr><br>
+  <br><div class="d-flex justify-content-center"><h2>Modifier Offre</h2></div><hr><br>
 
-  <form #offerForm="ngForm" (ngSubmit)="updateOffer()" novalidate *ngIf="offer">
-    <div class="form-group">
-        <label>Title</label>
-        <input type="text" class="form-control" [(ngModel)]="offer.title" name="title" required>
+  <div class="d-flex justify-content-center">
+    <div class="card" style="width: 700px;">
+      <div class="card-body">
+        <form #offerForm="ngForm" (ngSubmit)="updateOffer()" novalidate *ngIf="offer">
+          <div class="form-group">
+              <label>Title</label>
+              <input type="text" class="form-control" [(ngModel)]="offer.title" name="title" required>
+          </div>
+          <div class="form-group">
+              <label>Description</label>
+              <textarea class="form-control" rows="4" [(ngModel)]="offer.description" name="description" required></textarea>
+          </div>
+          <!-- Add new fields based on the updated offer model -->
+          <div class="form-group">
+              <label>Depart Date</label>
+              <input type="datetime-local" class="form-control" [(ngModel)]="offer.depart_date_formatted" name="depart_date" min="2024-04-21" required>
+            </div>
+          <div class="form-group">
+              <label>Arrival Date</label>
+              <input type="datetime-local" class="form-control" [(ngModel)]="offer.arrival_date_formatted" name="arrival_date" required>
+          </div>
+          <div class="form-group">
+              <label>Itinerary</label>
+              <textarea class="form-control" rows="4" [(ngModel)]="offer.itinerary" name="itinerary" required></textarea>
+          </div>
+          <div class="form-group">
+              <label>Volume</label>
+              <input type="number" class="form-control" [(ngModel)]="offer.volume" name="volume" required>
+          </div>
+          <div class="form-group">
+              <label>Price</label>
+              <input type="number" class="form-control" [(ngModel)]="offer.price" name="price" required>
+          </div>
+          <!-- End new fields -->
+          <button type="button" class="btn btn-secondary" style="margin-right:20px" (click)="goBack()">Annuler</button>
+          
+          <button type="submit" class="btn btn-primary" [disabled]="!offerForm.valid">Modifier</button>
+        </form>
+      </div>
     </div>
-    <div class="form-group">
-        <label>Description</label>
-        <textarea class="form-control" rows="4" [(ngModel)]="offer.description" name="description" required></textarea>
-    </div>
-    
-    <!-- Add more fields as needed -->
-    <button type="button" class="btn btn-secondary" style="margin-right:20px" (click)="goBack()">Annuler</button>
-    
-    <button type="submit" class="btn btn-primary" [disabled]="!offerForm.valid">Update</button>
-  </form>
+  </div>
 </div>
