--- a/src/app/admin-companies/demande-list.component.html
+++ b/src/app/admin-companies/demande-list.component.html
@@ -14,7 +14,7 @@
 <body>
   <app-sidebar></app-sidebar>
   <div class="main-content d-flex flex-column">
-  <app-navbar></app-navbar>
+  <app-root></app-root>
 <br><h2>Demandes</h2>
     <!-- Offer modal -->
 <!-- Button trigger modal -->
@@ -82,11 +82,6 @@
 
     <!-- Your existing code for displaying offers -->
 <hr><br>
-<div class="d-flex justify-content-center" *ngIf="loading">
-    <div class="spinner-border" role="status">
-        <span class="sr-only">Loading...</span>
-    </div>
-    </div>
 <div class="row">
   <div class="col-lg-4 col-md-6" *ngFor="let demande of demandes">
       <div class="card mb-30">
@@ -133,6 +128,9 @@
 </div>
 
 
+<div *ngIf="demandes.length === 0 && !errorMessage" class="loading-message">
+  Loading offers...
+</div>
 
 </body>
 </html>
