Update offer-list and profile components; add profile-details component
- Remove demande-list component and related files
- Update offer-list component HTML and TypeScript files
  - Add user profile images and information
  - Update

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -218,7 +218,7 @@
                     </div>
                 </li>
 
-                <li class="nav-item dropdown profile-nav-item" *ngIf="authService.isLoggedIn$ | async">
+                <li class="nav-item dropdown profile-nav-item" >
                     <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <div class="menu-profile">
                             <span class="name">Hi! {{ authService.infoUser.display_name }}</span>
