--- a/src/app/demande-list/demande-list.component.html
+++ b/src/app/demande-list/demande-list.component.html
@@ -1,138 +1,167 @@
 <html lang="zxx">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
- 
-
+    <title>Your Title Here</title>
     <link rel="icon" type="image/png" src="../../assets/img/favicon.png">
 </head>
-<div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
-
 <body>
-  <app-sidebar></app-sidebar>
-  <div class="main-content d-flex flex-column">
-  <app-navbar></app-navbar>
-<br><h2>Demandes</h2>
-    <!-- Offer modal -->
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" style="width: 165px;"  data-toggle="modal" data-target="#basicModal">
-    + Ajouter une demande
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="basicModal" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Ajouter une demande</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <!-- Form for adding an offer -->
-                <form (ngSubmit)="addDemande()" [formGroup]="offerForm">
-                    <div class="form-group">
-                        <label>Title</label>
-                        <input type="text" class="form-control" [(ngModel)]="newDemande.title" formControlName="title" name="title" >
+    <app-sidebar></app-sidebar>
+    <div class="main-content d-flex flex-column">
+        <app-navbar></app-navbar>
+        <br>
+        <h2>Demandes</h2>
+        <!-- Add demande modal -->
+        <button type="button" class="btn btn-primary" style="width: 165px;" data-toggle="modal" *ngIf="role === 'client'" data-target="#basicModal">
+            + Ajouter une demande
+        </button>
+        <div style="width:200px; margin-left:1000px">
+            <input type="text" class="form-control inline-block" placeholder="Rechercher..." [(ngModel)]="searchQuery" (input)="applyFilter()" >
+        </div>
+        <!-- Add Demande Modal -->
+        <div class="modal fade" id="basicModal" role="dialog" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" >Ajouter une demande</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
-                    <div class="form-group">
-                        <label>Description</label>
-                        <textarea class="form-control" rows="4" [(ngModel)]="newDemande.description" formControlName="description" name="description" required></textarea>
+                    <div class="modal-body">
+                        <!-- Form for adding a demande -->
+                        <form (ngSubmit)="addDemande()" [formGroup]="demandeForm">
+                            <div class="form-group">
+                                <label>Title</label>
+                                <input type="text" class="form-control"  formControlName="title" [(ngModel)]="newDemande.title" name="title">
+                            </div>
+                            <div class="form-group">
+                                <label>Description</label>
+                                <textarea class="form-control" rows="4"  formControlName="description" [(ngModel)]="newDemande.description" name="description" required></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label>Depart</label>
+                                <input type="text" class="form-control"  formControlName="depart" [(ngModel)]="newDemande.depart" name="depart">
+                            </div>
+                            <div class="form-group">
+                                <label>Destination</label>
+                                <input type="text" class="form-control"  formControlName="destination" [(ngModel)]="newDemande.destination" name="destination">
+                            </div>
+                            <div class="form-group">
+                                <label>Date déménagement</label>
+                                <input type="date" class="form-control"  formControlName="date" [(ngModel)]="newDemande.date" name="date">
+                            </div>
+                            <div class="form-group">
+                                <label>Volume(m3)</label>
+                                <input type="number" class="form-control" formControlName="volume" [(ngModel)]="newDemande.volume" name="volume">
+                            </div>
+                            <div class="form-group">
+                                <label>Budget(€)</label>
+                                <input type="number" class="form-control"  formControlName="price" [(ngModel)]="newDemande.price" name="price">
+                            </div>
+                            <!-- Add more fields as needed -->
+                        </form>
                     </div>
-                    <!-- Add more fields as needed -->
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" #cancelButton class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-primary"  [disabled]="!offerForm.valid" (click)="addDemande()">Ajouter</button>
+                    <div class="modal-footer">
+                        <button type="button" #cancelButton class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                        <button type="submit" class="btn btn-primary" [disabled]="!demandeForm.valid" (click)="addDemande()">Ajouter</button>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-<!--Info Modal-->
-<div class="modal fade" id="infoModal" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Details de la demande</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+        <!-- Info Modal -->
+        <div class="modal fade" id="infoModal" role="dialog" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Details du l'offre</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <!-- Display offer details -->
+                        <p>
+                            <b>Titre : </b>{{demandeDetails.title}}
+                            <br>
+                            <b>Description :</b> {{demandeDetails.description}}
+                            <br>
+                            <b>Date Déménagement : </b>{{demandeDetails.date_formatted}}
+                            
+                            <br>
+                            <b> depart : </b>{{demandeDetails.depart}}
+                            <br>
+                            <b> depart : </b>{{demandeDetails.destination}}
+                            <br>
+                            <b>Volume :</b> {{demandeDetails.volume}} m3
+                            <br>
+                            <b> Budget :</b> {{demandeDetails.price}} €
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" #cancelButton class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary" [disabled]="true">Contacter</button>
+                    </div>
+                </div>
             </div>
-            <div class="modal-body">
-                <!-- Form for adding an offer -->
-             <p>
-                Titre : {{demandeDetails.title}}
+        </div>
+        <!-- Your existing code for displaying demandes -->
+        <hr><br>
+        <div class="d-flex justify-content-center" *ngIf="loading">
+            <div class="spinner-border" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-md-6" *ngFor="let demande of filteredDemandes">
+              
                 <br>
-                description : {{demandeDetails.description}}
-             </p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" #cancelButton class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-primary"  [disabled]="!offerForm.valid" >Contacter</button>
+                <div class="card mb-30">
+                    <div class="user-info">
+                        <a [href]="'/details/' + demande.user_id"><img [src]="demande.picture" alt="Profile Image" class="rounded-circle" style="width: 30px; height: 30px;">
+                        <span style="color: black;margin-top:5px;margin-left:5px" ><h6>{{ demande.username }}</h6></span></a>
+                    </div>
+                    <small *ngIf="demande.creationDate">{{ demande.creationDate | date }}</small>
+                    <br>
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>{{demande.title}}</h3>
+                        <div class="dropdown">
+                            <button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class='bx bx-dots-horizontal-rounded' ></i>
+                            </button>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item d-flex align-items-center" data-toggle="modal" data-target="#infoModal" (click)="openInfoModal(demande.id)">
+                                    <i class='bx bx-show'></i> Voir
+                                </a>
+                                <a class="dropdown-item d-flex align-items-center" href="edit-demande/{{demande.id}}" *ngIf="role === 'client'"> 
+                                    <i class='bx bx-edit-alt'></i> Editer
+                                </a>
+                                <a class="dropdown-item d-flex align-items-center" (click)="confirmDelete(demande.id)"*ngIf="role === 'client'">
+                                    <i class='bx bx-trash'></i> Supprimer
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body" style="margin-top: -20px;">
+                        <p><b>Description: </b>{{demande.description}}
+                           <br>
+                           <b>date déménagement: </b> {{demande.date | date}}
+                           <br> 
+                           <b>Volume: </b> {{demande.volume}} (m3)<br>
+                           <b>Départ:</b>Le {{demande.depart}}<br>
+                           <b>Destination: </b>Le {{demande.destination}}<br>
+
+                           <b>Budget: </b>{{demande.price}} €
+                        </p>
+                        
+                    </div>
+                    <div class="card-footer" *ngIf="demande.updateDate">
+                        <small>Derniere mise a jour: {{ demande.updateDate | date }}</small>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!--end infoModal-->
-
-    <!-- Your existing code for displaying offers -->
-<hr><br>
-<div class="d-flex justify-content-center" *ngIf="loading">
-    <div class="spinner-border" role="status">
-        <span class="sr-only">Loading...</span>
-    </div>
-    </div>
-<div class="row">
-  <div class="col-lg-4 col-md-6" *ngFor="let demande of demandes">
-      <div class="card mb-30">
-        <small *ngIf="demande.creationDate">{{ demande.creationDate | creationDate }}</small>
-          <div class="card-header d-flex justify-content-between align-items-center">
-              <h3>{{demande.title}}</h3>
-              <br>
-              <div class="dropdown">
-                  <button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class='bx bx-dots-horizontal-rounded' ></i>
-                  </button>
-                  <div class="dropdown-menu">
-                      <a class="dropdown-item d-flex align-items-center" data-toggle="modal" data-target="#infoModal" (click)="openInfoModal(demande.id)">
-                          <i class='bx bx-show'></i> View
-                      </a>
-                      <a class="dropdown-item d-flex align-items-center"  href="edit-demande/{{demande.id}}">
-                          <i class='bx bx-edit-alt'></i> Edit
-                      </a>
-                      <a class="dropdown-item d-flex align-items-center"  (click)="confirmDelete(demande.id)" >
-                          <i class='bx bx-trash'></i> Delete
-                      </a>
-                  
-                  </div>
-              </div>
-          </div>
-          
-          <div class="card-body">
-              <p>{{demande.description}}</p>
-                
-             
-          </div>
-
-          <div class="card-footer" *ngIf="demande.updateDate">
-            <small >Derniere mise a jour: {{ demande.updateDate | updateDuration }}</small>
-          </div>
-      </div>
-  </div>
-
-  
-
-
-</div>
-
-</div>
-
-
-
 </body>
 </html>
