--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -38,7 +38,7 @@
                     <div class="dropdown-menu">
                         <div class="dropdown-header d-flex justify-content-between align-items-center">
                             <span class="title d-inline-block" *ngIf="messages.length > 0">{{messages.length}}Nouveau(x) Message(s)</span>
-                            <span class="clear-all-btn d-inline-block" (click)="clearAllMessages()"  *ngIf="messages.length > 0">Marquer tous comme lus</span>
+                            <span class="clear-all-btn d-inline-block" (click)="clearAllMessages()" >Marquer tous comme lus</span>
                         </div>
 
                         <div class="dropdown-body">
